No need for the text "more..." if showing a contextual menu
A caret is sufficient

Moreover, if a single-line has a menu and the badge is empty, then don't show
both - just the menu

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -325,6 +325,11 @@ img {
   color: white ;
   text-transform: lowercase ; 
   border-bottom: 1px solid $lightgray ; 
+
+  .caret { 
+    border-top: 4px solid white ;
+    width: 1px ;
+  } 
   
   &:hover {
     > .text { 
@@ -339,11 +344,13 @@ img {
       background-color: $orange ;
       color: $background ; 
     } 
+    .caret { border-top: 4px solid $orange ; }
   } 
   &.disabled{
     color: $lightgray ;
     .subtext { color: $lightgray ; }
     cursor: no-drop;
+    .caret { border-top: 4px solid $lightgray ; }
   }
   &.red {
     .badge { 
