[#69] simple_button helper method should set user specified type for a button

--- a/app/views/teachers/_wsb-sektions.html.haml
+++ b/app/views/teachers/_wsb-sektions.html.haml
@@ -21,6 +21,6 @@
           -#= simple_button :icon => 'icon-envelope', :id => 'btn-publish-ws', :toggle => :button,
             :tooltip => "Send PDFs to students", :class => 'btn-primary', :placement => :right
         .btn-group
-          = simple_button :icon => 'icon-wrench', :id => 'build-worksheet', :for => "Make PDF"
+          = simple_button :icon => 'icon-wrench', :id => 'build-worksheet', :for => "Make PDF", :type => :submit
       #wsb-sektions.tab-pane.multi-select
 
