Edited (trimmed) text in demo modals

--- a/app/views/modals/teacher/_demo-intro.html.haml
+++ b/app/views/modals/teacher/_demo-intro.html.haml
@@ -4,17 +4,17 @@
     = image_tag 'quick-trial/idea.png', :class => 'big-icon'
   .span8
     %p.title= "What is it?"   
-    %p
-      The idea behind QuickTrial is to let you experience first hand 
-      what it is like to use Gradians.com and send student work for grading
-    %p
-      Please note that this would be a quick overview. But nevertheless, you will 
-      have a much better sense of what using the site  on a day-to-day basis would entail
-    %p 
-      If you are ready to start, then press the <b>Lauch QuickTrial</b> button below. 
-      We will pretend that you are a teacher with one student
-    %p
-      If you have a printer and a scanner ready at hand, then the whole exercise should take 
-      5-7 minutes to complete
+    %ul
+      %li
+        %p
+          QuickTrial lets you experience what it is like to use Gradians.com 
+          and send student work for grading on a regular basis
+      %li
+        %p
+          This is a quick overview. If you have access to a scanner and 
+          a printer, then the whole exercise should take less than 10 minutes
+      %li
+        %p
+          Press the button below to start your <b>QuickTrial</b> now
     = simple_button :for => "Launch QuickTrial", :id => 'btn-launch-demo', :class => 'btn-primary push-down pull-right'
       
