--- a/app/views/modals/teacher/_demo.html.haml
+++ b/app/views/modals/teacher/_demo.html.haml
@@ -10,12 +10,11 @@
       .span8
         %h1= "Pick a topic"
         %p
-          \... and we will make a short quiz and a worksheet for you
+          \... and we will create a short quiz and a worksheet for you
         %p
-          Each quiz has 1-2 questions and the resulting worksheet is made 
-          for one fictitious student
+          The quiz will have 1-2 questions, and the worksheet is assigned to a fictitious student
         %p
-          Please allow a couple of minutes for the PDFs to get ready
+          <b>Note:</b> Please allow a few minutes for the PDFs to be ready 
 
     -# print
     .span3
@@ -24,12 +23,13 @@
       .span8
         %h1= "Print & Write"
         %p
-          Download the 1-page worksheet for a topic and print it out 
+          Download a worksheet PDF and print it out
         %p
-          Then, pretend to be a student and write something - preferably with a pen -  
-          in the blank space provided after every question
+          Then, write a solution (as a student would, and preferably with a pen) in 
+          the space provided after each question
         %p
-          We recommend you make intentional mistakes so that you can see how we grade
+          <b>Note:</b> Do make intentional mistakes if you would like to see 
+          a sample of our feedback
 
     -# upload
     .span3
@@ -38,14 +38,12 @@
       .span8
         %h1= "Scan & Upload"
         %p
-          When done writing, put the page in a scanner and scan
+          When done writing, scan the worksheet
         %p
-          Most - if not all - modern scanners will give you the option of saving the scan 
-          as a document PDF. Select that option. What you will then have is one PDF file 
-          with all scanned pages in it
+          Most - if not all - modern scanners have the option of saving scans as a PDF.
+          Select that option, so that you create one PDF file for all scanned pages
         %p
-          Upload that PDF file. That's it!! We now have the worksheet and will grade it shortly. You 
-          will get an e-mail when we are done grading
+          Upload that file - and thats it!!
           
 
   -# active components
