[standardization]: Rendering all modals within a div[id='modals']
This way, if we want to define some logic for inter-modal behaviour, then
we can use #modals as a standardized start point

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -24,7 +24,7 @@
     = render :partial => 'toolbox/fdb-panel'
 
 - content_for :modals do
-  #modal-forms
+  #modals
     = render :partial => 'modals/user/account'
     = render :partial => 'modals/teacher/suggestion'
     = render :partial => 'modals/teacher/add-sektion'
