--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -16,9 +16,10 @@
     = render :partial => 'menus/examiner/blockdb'
   
 - content_for :modals do
-  = render :partial => 'modals/user/account'
-  = render :partial => 'notifications/shared/last-scan'
-  = render :partial => 'notifications/shared/first-scan'
+  #modals
+    = render :partial => 'modals/user/account'
+    = render :partial => 'notifications/shared/last-scan'
+    = render :partial => 'notifications/shared/first-scan'
 
 !!!5
 
