--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -12,8 +12,9 @@
     = render :partial => 'menus/student/inbox'
 
 - content_for :modals do
-  = render :partial => 'modals/user/account'
-  = render :partial => 'modals/student/enroll'
+  #modals
+    = render :partial => 'modals/user/account'
+    = render :partial => 'modals/student/enroll'
 
 !!!5
 
