Added a stopwatch to single-line

--- a/app/views/toolbox/_line.html.haml
+++ b/app/views/toolbox/_line.html.haml
@@ -14,6 +14,7 @@
   .span2.long-badge
   .text
   .span2.subtext
+  .stopwatch
   .btn.btn-mini{ :data => { :toggle => :tooltip, :placement => :top, :title => 'Select' } }
     %i.icon-white.icon-plus-sign
     %input.hide{ :type => :checkbox, :value => :true}
