[demo]: Added a stopwatch alongside each PDF download link
This way, user will know estimated time before each PDF is ready.
And more than often than not, it will be ready before the initially stated time
=> a pleasant surprise

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -1101,14 +1101,26 @@ li.split {
   line-height: 14px ;
 
   ul.nav {
-    li > a { 
-      font : { 
-        size: 12px ;
-        weight: 300 ;
+    li {
+      > a { 
+        font : { 
+          size: 12px ;
+          weight: 300 ;
+        }
+        padding: {
+          top: 3px ;
+          bottom: 3px ;
+        }
+        border-bottom: 1px dotted white ; 
       }
-      margin-bottom: 7px ;
-      padding-bottom: 3px ;
-      border-bottom: 1px dotted white ; 
+
+      [class*='span'] { 
+        min-height: 15px ;
+      }
+
+      > .stopwatch { 
+        font: { size: 10px ; weight: 500 ; }
+      }
     }
   }
 
