--- a/app/views/modals/teacher/_demo.html.haml
+++ b/app/views/modals/teacher/_demo.html.haml
@@ -7,7 +7,7 @@
     .span3.offset1
       .span3
         = image_tag 'quick-trial/build.png', :class => 'big-icon'
-      .span8
+      .span8.offset1
         %h1= "Pick a topic"
         %p
           \... and we will create a short quiz and a worksheet for you
