Minor styling changes to suggestion-upload form

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -923,6 +923,12 @@ li.split {
    color: white ;
    font-size: 11px ;
   }
+
+  h3 {
+    &.with-border { 
+      border-bottom: 1px solid white ; 
+    }
+  }
 }
 
 #m-register {
