--- a/app/views/modals/teacher/_suggestion.html.haml
+++ b/app/views/modals/teacher/_suggestion.html.haml
@@ -14,7 +14,7 @@
           .subtext.hide= "Please select a file first"
 
       .row-fluid
-        %h3= "Accepted Formats"
+        %h3.with-border= "Accepted Formats"
         .span5
           %ul
             %li= "PDF"
@@ -26,7 +26,7 @@
             %li= "Plain text file"
           
       .row-fluid
-        %h3= "By clicking on upload you acknowledge that ... "
+        %h3.with-border= "By clicking on upload you acknowledge that ... "
         .span5
           %p
             To the best of your knowledge, you have never uploaded these same questions before
