minor styling changes to upload modal

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -1150,3 +1150,10 @@ li.split {
   } 
 } 
 
+#m-upload-what { 
+  h1,h2,h3 { 
+    color: white ;
+    border-bottom: 1px solid white ;
+    margin-bottom: 10px ;
+  } 
+} 
