--- a/app/views/modals/user/_upload-scans.html.haml
+++ b/app/views/modals/user/_upload-scans.html.haml
@@ -4,7 +4,7 @@
     .span3
       = image_tag 'quick-trial/upload.png', :class => 'big-icon'
     .span8
-      %h1.white= "Upload?"
+      %h2= "What would you like to upload?"
       = simple_button :for => "Scans for Grading", :class => 'btn-large btn-primary', :id => 'btn-upload-scans'
       = simple_button :for => "Question(s)", :class => 'btn-large btn-inverse pull-right', :id => 'btn-upload-sg'
 
