[#79]: Issue arising perhaps due to excessive padding of navbar > li > a
Also, rationalized z-indices of control-panel, modal-backdrop and modals

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -637,7 +637,7 @@ button[data-toggle='button'] {
 #control-panel { 
   position: fixed ;
   top: 0px ;
-  z-index: 1051 ;
+  z-index: 3;
   min-width: 700px ;
   width: 1024px ;
   ul {
@@ -649,8 +649,7 @@ button[data-toggle='button'] {
 
   a { 
     &.selected { 
-      border-radius: 6px ;
-      background-color: $deep-blue ;
+      color: $orange ; 
     } 
   }
 } 
