--- a/app/assets/stylesheets/bootstrap.css.scss
+++ b/app/assets/stylesheets/bootstrap.css.scss
@@ -3861,7 +3861,10 @@ button.btn.btn-mini, input[type="submit"].btn.btn-mini {
       float: left;
       > a {
         float: none;
-        padding: 13px 15px 13px;
+        margin: {
+          right: 20px ;
+          top: 13px ;
+        } 
         color: #777777;
         text-decoration: none;
         text-shadow: 0 1px 0 #ffffff;
@@ -5007,13 +5010,14 @@ a.thumbnail:hover {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 1040;
+  z-index: 2;
   background-color: #000000;
   &.fade {
     opacity: 0;
     &.in {
       opacity: 0.8;
       filter: alpha(opacity = 80);
+      z-index: 4 ;
     }
   }
   opacity: 0.8;
@@ -5024,7 +5028,7 @@ a.thumbnail:hover {
   position: fixed;
   top: 250px;
   left: 60%;
-  z-index: 1050;
+  z-index: 2 ;
   width: 560px;
   margin: -250px 0 0 -280px;
   // background-color: #ffffff;
@@ -5053,6 +5057,7 @@ a.thumbnail:hover {
       // top: 70%;
       top: 250px ;
       left: 60% ;
+      z-index: 5 ;
     }
   }
 }
