minor edits to demo-intro

--- a/app/views/modals/teacher/_demo-intro.html.haml
+++ b/app/views/modals/teacher/_demo-intro.html.haml
@@ -14,8 +14,8 @@
           and send student work for grading on a regular basis
       %li
         %p
-          This is a quick overview. If you have access to a scanner and 
-          a printer, then the whole exercise should take less than 10 minutes
+          It is a quick overview. If you have access to a pen, a printer and 
+          a scanner, then the whole exercise should take less than 10 minutes
       %li
         %p
           Press the button below to start your <b>QuickTrial</b> now
