Minor correction in registration modal

--- a/app/views/modals/user/_register.html.haml
+++ b/app/views/modals/user/_register.html.haml
@@ -4,7 +4,7 @@
 - student = Student.new 
 - student_account = student.build_account
 
-#m-register.modal.hide.slim
+#m-register.modal.fade.slim
   %ul.nav.nav-tabs.always-on
     %li
       = simple_link :for => "Teacher", :id => 'tab-register-1', :href => '#pane-register-1'
