Changed 'How-to' to 'Help'

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -107,7 +107,7 @@
                 %li.dropdown
                   = simple_link :for => "Misc.", :as => :dropdown, :id => 'm-teacher-workbench'
                 %li.dropdown
-                  = simple_link :for => "How to", :as => :dropdown, :id => 'm-howto'
+                  = simple_link :for => "Help", :as => :dropdown, :id => 'm-howto'
                 %li.dropdown
                   = simple_link :for => "Quick Trial", :id => 'lnk-demo', :href => '#m-demo-intro'
                 %li#cp-account-link.dropdown
