--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -105,7 +105,7 @@
                 %li.dropdown
                   = simple_link :for => "Upload", :id => 'lnk-upload', :href => '#m-upload-what'
                 %li.dropdown
-                  = simple_link :for => "Misc.", :as => :dropdown, :id => 'm-teacher-workbench'
+                  = simple_link :for => "Groups", :as => :dropdown, :id => 'm-teacher-workbench'
                 %li.dropdown
                   = simple_link :for => "Help", :as => :dropdown, :id => 'm-howto'
                 %li.dropdown
