[#64]: Changed welcome e-mail for teachers

--- a/app/views/mailbot/welcome_teacher.html.haml
+++ b/app/views/mailbot/welcome_teacher.html.haml
@@ -1,32 +1,26 @@
 
-%h3= "Thank you for registering with Gradians.com"
+%h5= "Dear #{@account.loggable.first_name}," 
 %p
-  Your <b>free account</b> has been created. You can access it using this email
-  address and the password you specified during registration.
-
-%h4= "What next? Make a quiz!"
-
+  Thank you for registering with Gradians.com. Your account has been 
+  created and you can access it using the e-mail and password you 
+  provided during registration
 %p
-  %ol
-    %li 
-      Pick topics and questions to build a quiz
-    %li 
-      Assign this quiz to students from the sample class <b>gradians</b>.  
-    %li
-      Download and print the testpaper PDF. 
-    %li
-      Attempt it as though you were a student. 
-    %li
-      Scan the testpaper and send it to us using our downloadable scanning utility <b>Scanbot</b>.
-      We will grade the papers and the reports would become available in your account
+  If you haven't already, we would strongly recommend you try the <b>QuickTrial</b> first. 
+  The QuickTrial is a quick overview of what using the site entails. In 3-easy steps, you 
+  will go from making a quiz (for a fictitious student) to sending that student's work 
+  to us for grading
 %p
-  There is <b>no limit</b> on how many times you can repeat the above cycle. 
-  Use the online How-To documentation as a step-by-step guide. It covers all 
-  the steps described above and can be of great help while getting started.
- 
+  In the QuickTrial, we make the quiz for you. But of course, you would want to pick 
+  your own questions and make your own quiz
 %p
-  Needless to say, we are here to help as you try gradians.com out. Write to 
-  us on <b>help@gradians.com</b> with any queries that you may have 
+  And therefore, as the next step, we would recommend you try making your own quiz. 
+  Refer to our help to see how this - and other common tasks - are done. When you 
+  select a topic from <b>Help</b>, it will start a guided tour that will tell you 
+  where to click and what to do next. Its quite simple really
 %p
-  <b>Gradians Support Team</b>
-
+  However, if you still need help - or have questions - then do feel free to write to 
+  us at <b>help@gradians.com</b>. We are here to answer all your questions
+%p
+  %h6
+    Abhinav and Akshay<br/>
+    Co-founders, Gradians.com
