- [documentMaster] Issue #24 required reworking of how "receiveScan" happens. It's gone to a more stable, transactional process, where each scan receipt is noted in the database and finally at the end of the job run work distribution takes place for all received scans - also a few minor haml changes

--- a/app/views/mailbot/welcome_teacher.html.haml
+++ b/app/views/mailbot/welcome_teacher.html.haml
@@ -4,23 +4,28 @@
   Thank you for registering with Gradians.com. Your account has been 
   created and you can access it using the e-mail and password you 
   provided during registration
+
 %p
-  If you haven't already, we would strongly recommend you try the <b>QuickTrial</b> first. 
-  The QuickTrial is a quick overview of what using the site entails. In 3-easy steps, you 
-  will go from making a quiz (for a fictitious student) to sending that student's work 
-  to us for grading
+  If you haven't tried it already, we highly recommend <b>QuickTrial</b>. 
+  QuickTrial gives an overview of what its like to use the site in 3-easy steps -
+  Make a worksheet (for a fictitious student), print it out and write something,
+  Scan and Upload it for grading
+
 %p
-  In the QuickTrial, we make the quiz for you. But of course, you would want to pick 
-  your own questions and make your own quiz
+  In QuickTrial, we pick the questions for you, but of course you would want 
+  to pick your own and make your own quiz.
+
 %p
   And therefore, as the next step, we would recommend you try making your own quiz. 
   Refer to our help to see how this - and other common tasks - are done. When you 
   select a topic from <b>Help</b>, it will start a guided tour that will tell you 
   where to click and what to do next. Its quite simple really
+
 %p
   However, if you still need help - or have questions - then do feel free to write to 
   us at <b>help@gradians.com</b>. We are here to answer all your questions
+
 %p
-  %h6
+  %h5
     Abhinav and Akshay<br/>
     Co-founders, Gradians.com
