--- a/app/views/modals/teacher/_demo.html.haml
+++ b/app/views/modals/teacher/_demo.html.haml
@@ -8,7 +8,7 @@
       .span3
         = image_tag 'quick-trial/build.png', :class => 'big-icon'
       .span8.offset1
-        %h1.orange= "Pick a topic"
+        %h1.orange= "1. Pick a topic"
         %p
           \... and we will create a short quiz and a worksheet for you
         %p
@@ -21,7 +21,7 @@
       .span3
         = image_tag 'quick-trial/printer.png', :class => 'big-icon'
       .span8
-        %h1.orange= "Print & Write"
+        %h1.orange= "2. Print & Write"
         %p
           Download a worksheet PDF and print it out
         %p
@@ -36,7 +36,7 @@
       .span3
         = image_tag 'quick-trial/upload.png', :class => 'big-icon'
       .span8
-        %h1.orange= "Scan & Upload"
+        %h1.orange= "3. Scan & Upload"
         %p
           When done writing, scan the worksheet
         %p
