--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -948,7 +948,7 @@ li.split {
   }
 } 
 
-#register { 
+#li-about-us { 
   margin: {
     left: 60px ;
     top: 8px ;
@@ -1160,3 +1160,21 @@ li.split {
     margin-bottom: 10px ;
   } 
 } 
+
+
+.btn-huge {
+  p {
+    border-bottom: 2px solid ;
+    padding-bottom: 12px ;
+  }
+  margin-top: -22px ;
+  padding: 20px ;
+  font-size: 21.75px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 12px;
+  [class^="icon-"], [class*=" icon-"] {
+    margin-top: 2px;
+  }
+}
+
